automatically backed up by learn

--- a/app/views/landmarks/edit.erb
+++ b/app/views/landmarks/edit.erb
@@ -4,7 +4,7 @@
   <input type="text" id="name" name="landmark[name]" value="<%=@landmark.name%>">
 
   <label>Landmark Date Completed</label>
-  <input type="text" id="year_completed" name="landmark[year_completed]" value="<%=@landmark.year_completed%>">
+  <input type="text" id="year_completed" name="landmark[year_completed]" value="<%=@landmark.year_completed.to_s%>">
 
   <input type="submit" value="Edit Landmark">
 </form>
