automatically backed up by learn

--- a/app/views/landmarks/edit.erb
+++ b/app/views/landmarks/edit.erb
@@ -1,7 +1,7 @@
 <h1>Edit Landmark:</h1>
 <form action="/landmarks/<%=@landmark.id%>" method="post">
   <label>Landmark Name:</label>
-  <input type="text" id="name" name="landmark[name]">
+  <input type="text" id="name" name="landmark[name]" value=<%=@landmark.name%> >
 
   <label>Landmark Date Completed</label>
   <input type="text" id="year_completed" name="landmark[year_completed]" value="<%=@landmark.year_completed.to_s%>">
